优化RecipeEntry的初始化和数据保存，添加IVSRecipeData统一接口